# filetofile

./: README.md  pyproject.toml
filetofile/: hooks.py  modules.txt
filetofile/filetofile/: utils.py
filetofile/filetofile/doctype/processedfile/: processedfile.js  processedfile.json  processedfile.py  test_processedfile.py
filetofile/filetofile/doctype/processedfile/templates/: processedfile_row.html
filetofile/filetofile/doctype/rawfile/: rawfile.js  rawfile.json  rawfile.py  test_rawfile.py
filetofile/filetofile/web_form/upload_raw_file/: upload_raw_file.json
filetofile/fixtures/: custom_docperm.json  role.json  server_script.json  web_page.json
